--- a/build.gradle
+++ b/build.gradle
@@ -43,13 +43,14 @@ version '1.1-SNAPSHOT'
 
 
 dependencies {
-    compile 'org.scala-lang:scala-library:2.12.3'
-    provided 'io.gatling:gatling-core:2.3.0'
+    compile 'org.scala-lang:scala-library:2.12.4'
+    provided 'io.gatling:gatling-core:3.0.2'
     compile 'org.fusesource.mqtt-client:mqtt-client:1.14'
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.5'
+    gradleVersion = '4.10.3'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
 
